src/test/ui/constructor-lifetime-args.stderr
error[E0107]: this struct takes 2 lifetime arguments but only 1 lifetime argument was supplied
  --> $DIR/constructor-lifetime-args.rs:17:5
   |
LL |     S::<'static>(&0, &0);
   |     ^   ------- supplied 1 lifetime argument
   |     |
   |     expected 2 lifetime arguments
   |
note: struct defined here, with 2 lifetime parameters: `'a`, `'b`
  --> $DIR/constructor-lifetime-args.rs:9:8
   |
LL | struct S<'a, 'b>(&'a u8, &'b u8);
   |        ^ --  --
help: add missing lifetime argument
   |
LL |     S::<'static, 'b>(&0, &0);
   |                ^^^^

error[E0107]: this struct takes 2 lifetime arguments but 3 lifetime arguments were supplied
  --> $DIR/constructor-lifetime-args.rs:19:5
   |
LL |     S::<'static, 'static, 'static>(&0, &0);
   |     ^                   --------- help: remove this lifetime argument
   |     |
   |     expected 2 lifetime arguments
   |
note: struct defined here, with 2 lifetime parameters: `'a`, `'b`
  --> $DIR/constructor-lifetime-args.rs:9:8
   |
LL | struct S<'a, 'b>(&'a u8, &'b u8);
   |        ^ --  --

error[E0107]: this enum takes 2 lifetime arguments but only 1 lifetime argument was supplied
  --> $DIR/constructor-lifetime-args.rs:22:8
   |
LL |     E::V::<'static>(&0);
   |        ^   ------- supplied 1 lifetime argument
   |        |
   |        expected 2 lifetime arguments
   |
note: enum defined here, with 2 lifetime parameters: `'a`, `'b`
  --> $DIR/constructor-lifetime-args.rs:10:6
   |
LL | enum E<'a, 'b> {
   |      ^ --  --
help: add missing lifetime argument
   |
LL |     E::V::<'static, 'b>(&0);
   |                   ^^^^

error[E0107]: this enum takes 2 lifetime arguments but 3 lifetime arguments were supplied
  --> $DIR/constructor-lifetime-args.rs:24:8
   |
LL |     E::V::<'static, 'static, 'static>(&0);
   |        ^                   --------- help: remove this lifetime argument
   |        |
   |        expected 2 lifetime arguments
   |
note: enum defined here, with 2 lifetime parameters: `'a`, `'b`
  --> $DIR/constructor-lifetime-args.rs:10:6
   |
LL | enum E<'a, 'b> {
   |      ^ --  --

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0107`.
